sticky nav, removed sticky aside, landing page improvements

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -66,6 +66,10 @@ img {
   background-color: $background-light-gray;
 }
 
+.insights {
+  background-color: #F4FBF9;
+}
+
 .similar-properties-gray {
   background-color: $similar-properties-gray;
 }
