--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -61,6 +61,9 @@ body {
 .content-wrap {
 	flex: 1;
 	padding-top: 100px;
+	&.leading {
+		padding-top: 0;
+	}
 }
 
 .full {
@@ -81,8 +84,9 @@ body {
 }
 
 aside {
-	width: 320px;
-	padding-right: 30px;
+	@include span(3 of 12);
+	// width: 320px;
+	// padding-right: 30px;
 }
 
 main {
