--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -4,6 +4,15 @@ header {
 	padding-top: 4px;
 	padding-bottom: 2px;
 	background-color: #fff;
+	position: fixed;
+	height: 76px;
+	background-color: #fff;
+	z-index: 1000;
+	&.nav-down {
+		background-color: rgba(white,.98);
+		border-bottom: 1px solid darken(white,7%);
+	}
+	width: 100%;
 	position: relative;
 	@include clearfix;
 	.flex {
