--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -19,7 +19,8 @@
 // third-party
 @import 'third-party/_slick.scss';
 @import 'third-party/_react-select.scss';
-@import 'third-party/_fotorama.scss';
+// @import 'third-party/_fotorama.scss';
+@import 'third-party/_animate.scss';
 
 
 // components
@@ -36,6 +37,7 @@
 @import 'modules/_buttons.scss';
 @import 'modules/_circle.scss';
 @import 'modules/_property_tiles.scss';
+@import 'modules/_insight_tile.scss';
 
 // pages
 // @import 'pages/_landing.scss';
