--- a/src/scss/modules/_circle.scss
+++ b/src/scss/modules/_circle.scss
@@ -4,21 +4,28 @@
 	display: block;
 	width: 100%;
 	height: 150px;
-
+	* {
+		font-family: $header-font-family;
+	}
 	h4 {
 		margin-bottom: 0;
 		text-align: center;
 	}
-	.circle {
-		position: absolute;
-		left: 0;
-		right: 0;
-		top: 0;
-		height: 100px;
-		width: 100px;
-		border-radius: 50%;
-		border: 3px solid $green;
+	svg {
+		* {
+			fill: $text-green;
+		}
 	}
+	// .circle {
+	// 	position: absolute;
+	// 	left: 0;
+	// 	right: 0;
+	// 	top: 0;
+	// 	height: 100px;
+	// 	width: 100px;
+	// 	border-radius: 50%;
+	// 	border: 3px solid $green;
+	// }
 	.no-hover {
 		position: absolute;
 		top: 0;
@@ -28,7 +35,9 @@
 		display: flex;
 		flex-flow: column nowrap;
 		justify-content: flex-end;
-		h4, .circle {
+		h4 {
+			font-family: $header-font-bold;
+			font-size: 18px;
 			opacity: 1;
 			transition: .15s;
 			transition-delay: .1s;
@@ -45,14 +54,26 @@
 		justify-content: flex-end;
 		opacity: 0;
 		transition: .15s;
+		* {
+			color: $text-green;
+		}
+		
 		p {
 			margin-bottom: 15px;
+			font-family: $header-font-medium;
+			font-size: 15px;
+			line-height: 20px;
 		}
 		.title {
 			margin-bottom: 15px;
+			font-family: $header-font-bold;
+			font-size: 18px;
 		}
 		.sub-title {
-			font-size: 10px;
+			font-size: 12px;
+			font-family: $base-font-family;
+			font-weight: 700;
+
 		}
 	}
 	&:hover, &:focus {
@@ -61,9 +82,13 @@
 				opacity: 0;
 				transition: .15s;
 			}
-			.circle {
-				opacity: .1;
+			svg {
 				transition: .15s;
+			}
+			svg * {
+				fill-opacity: .05;
+				stroke: none;
+				
 			}			
 		}
 		.hover {
